# my_bokbot

./: .gitignore  README.md  SESSIONS.md  Team_Guide.md
src/bumperbot_bringup/: package.xml
src/bumperbot_bringup/launch/: real_robot.launch.py
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/config/: bumperbot_controllers.yaml
src/bumperbot_controller/launch/: controller.launch.py
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/launch/: display.launch.py
src/bumperbot_firmware/: CMakeLists.txt  package.xml
src/bumperbot_firmware/bumperbot_firmware/: mpu6050_driver.py  velocityconverter.py
src/bumperbot_firmware/launch/: hardware_interface.launch.py
src/bumperbot_firmware/src/: bumperbot_interface.cpp
src/myrobot_bringup/: package.xml
src/myrobot_bringup/launch/: main.launch.py  real_robot.launch.py  sim_blind_robot.launch.py  sim_robot.launch.py
src/myrobot_controller/: CMakeLists.txt  package.xml
src/myrobot_controller/config/: myrobot_controllers.yaml
src/myrobot_controller/launch/: controller.launch.py
src/myrobot_description/: CMakeLists.txt
src/myrobot_description/launch/: gazebo.launch.py
src/myrobot_description/worlds/: arena_world.sdf
src/myrobot_firmware/: CMakeLists.txt  package.xml
src/myrobot_firmware/launch/: hardware_interface.launch.py
src/myrobot_localization/: CMakeLists.txt  package.xml
src/myrobot_mapping/: CMakeLists.txt  package.xml
src/myrobot_navigation/: CMakeLists.txt  nav2_tuning_guide.md  package.xml
src/myrobot_navigation/config/: bt_navigator.yaml  controller_server.yaml  controller_server_1.yaml  controller_server_blind.yaml  costmap.yaml  planner_server.yaml  planner_server_blind.yaml
src/myrobot_navigation/launch/: navigation.launch.py  navigation_blind.launch.py
src/myrobot_navigation/myrobot_navigation/: simplepath.py
src/myrobot_navigation/scripts/: waypoint_follower.py
src/myrobot_vision/: CMakeLists.txt  package.xml
src/myrobot_vision/config/: markers.yaml  vision_settings.yaml
src/myrobot_vision/launch/: vision.launch.py
src/myrobot_vision/myrobot_vision/: aruco_detector.py  detected_crates_tf.py  object_detection.py  relocalizer.py  sequence_manager.py  view_camera.py
(+36 files in other folders)
